src/ui/readarr_ui/system/snapshots/managarr__ui__readarr_ui__system__system_ui_tests__tests__snapshot_tests__popups_over_system_ui_SystemQueuedEvents.snap
---
source: src/ui/readarr_ui/system/system_ui_tests.rs
expression: output
---
╭  Tasks  ────────────────────────────────────────────────────────────────────────╮╭  Queued Events  ───────────────────────────────────────────────────────────────╮
│Name                   Interval            Last Execution     Next Execution     ││Trigger    Status      Name                Queued        Started     Duration   │
│Backup task            2 hours             30 minutes ago     1 hour             ││manual     completed   queued event one    1 hour ago    30 minutes  00:29:14   │
│Rss sync task          15 minutes          8 minutes ago      3 minutes          ││scheduled  started     queued event two    15 minutes ag 4 minutes a 01:02:03   │
│Housekeeping task      1 day               4 hours ago        18 hours           ││external   queued      queued event three  1 minute ago                         │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                ╭  Queued Events  ────────────────────────────────────────────────────────────────────────────────╮                                │
│                                │Trigger       Status       Name                     Queued           Started       Duration      │                                │
│                                │manual        completed    queued event one         1 hour ago       30 minutes ag 00:29:14      │                                │
│                                │scheduled     started      queued event two         15 minutes ago   4 minutes ago 01:02:03      │                                │
│                                │external      queued       queued event three       1 minute ago                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
╰────────────────────────────────│                                                                                                 │────────────────────────────────╯
╭  Logs  ────────────────────────│                                                                                                 │────────────────────────────────╮
│2025-12-16 16:40:59 UTC|INFO|Imp│                                                                                                 │                                │
│2025-12-16 16:41:12 UTC|WARN|Boo│                                                                                                 │                                │
│2025-12-16 16:41:30 UTC|FATAL|Co│                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯                                │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
